fix: bug for overflow

--- a/src/public/css/user.less
+++ b/src/public/css/user.less
@@ -46,6 +46,10 @@ body {
   overflow: hidden;
 }
 
+.post-title {
+  overflow: hidden;
+}
+
 .recent-posts {
   display: flex;
   justify-content: space-between;
